--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://elnurnabivi.github.io/Bank-app",
   "name": "bank-app",
   "private": true,
   "version": "0.0.0",
@@ -26,6 +27,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "gh-pages": "^6.1.0",
     "vite": "^5.0.0"
   }
 }
